[package]
name = "k7-multiplayer-server"
version = "0.1.0"
edition = "2021"
description = "K7 WebSocket multiplayer server (broadcast)"

[[bin]]
name = "k7-multiplayer-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["sync", "net", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
