[package]
name = "k7-native"
version = "0.1.0"
edition = "2021"
description = "K7 native runtime: pixels + winit + wasmtime"

[lib]
name = "k7_native"
path = "src/lib.rs"

[[bin]]
name = "k7"
path = "src/main.rs"

[dependencies]
k7 = { path = "../k7" }
pixels = "0.15"
winit = "0.29"
wasmtime = "42.0.1"
anyhow = "1.0"
rand = "0.8"
log = "0.4"
cpal = "0.15"
env_logger = "0.11"
