[package]
name = "k7-web"
version = "0.1.0"
edition = "2021"
description = "K7 browser runtime: canvas + Web Audio + load game WASM"

[lib]
crate-type = ["cdylib"]

[dependencies]
k7 = { path = "../k7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "CanvasRenderingContext2d", "HtmlCanvasElement", "AudioContext", "ImageData", "Element", "WebSocket", "MessageEvent"] }
js-sys = "0.3"
log = "0.4"
